--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,17 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/bisque"
     tools:context=".Home">
 
-    <TextView
-        android:id="@+id/titulohome"
+    <ImageView
+        android:id="@+id/imagehome"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="BIENVENIDO"
+        android:src="@drawable/icono_fla"
+        app:layout_constraintVertical_bias="0.1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/titulohome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/imagehome"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="MANAURE - LA GUAJIRA"
+        android:textSize="28dp"
+        android:textColor="@color/hotpink"
+        android:textStyle="bold"
+        app:layout_constraintVertical_bias="0.1"
+        />
+    <Button
+        android:id="@+id/botonHoteles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/titulohome"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        android:layout_marginHorizontal="20dp"
+        android:backgroundTint="@color/brown"
+        android:text="Hoteles"
+
+        />
+    <Button
+        android:id="@+id/botonRestaurantes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/botonHoteles"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginHorizontal="20dp"
+        android:backgroundTint="@color/brown"
+        android:text="Restaurante"
+
+        />
+    <Button
+        android:id="@+id/botonSitios"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/botonRestaurantes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        android:layout_marginHorizontal="20dp"
+        android:backgroundTint="@color/brown"
+        android:text="Sitios Turisticos"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
