--- a/app/src/main/res/layout/activity_hoteles.xml
+++ b/app/src/main/res/layout/activity_hoteles.xml
@@ -6,15 +6,68 @@
     android:layout_height="match_parent"
     tools:context=".Hoteles">
 
-    <TextView
+    <ImageView
+        android:id="@+id/bannerHotel"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBaseline_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/hotelbanner"
+        android:adjustViewBounds="true"
+        />
+    <TextView
+        android:id="@+id/titulohomehoteles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bannerHotel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/titulohomehoteles"
+        android:textAlignment="center"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        app:layout_constraintVertical_bias="0.05"
+        />
+    <TextView
+        android:id="@+id/descripcionhoteles"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/titulohomehoteles"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/descripcionhomehoteles"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        app:layout_constraintVertical_bias="0.1"
+        />
+    <ImageView
+        android:id="@+id/manohoteles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/mano"
+        app:layout_constraintTop_toBottomOf="@id/descripcionhoteles"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintVertical_bias="0.3"
+        />
 
-        android:text="HOTELES"
-        android:textSize="50dp"
+    <Button
+        android:id="@+id/botonhomehoteles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/descripcionhoteles"
+        app:layout_constraintStart_toEndOf="@id/manohoteles"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintHorizontal_bias="0.4"
+        android:backgroundTint="@color/brown"
+        android:text="@string/botonhomehoteles"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
