--- a/app/src/main/res/layout/activity_sitios.xml
+++ b/app/src/main/res/layout/activity_sitios.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".Sitios">
 
+    <ImageView
+        android:id="@+id/bannersitios"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/salinas"
+        android:adjustViewBounds="true"
+        app:layout_constraintVertical_bias="0"
+        />
+    <TextureView
+        android:id="@+id/titulohomesitios"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/bannersitios"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
