--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.2"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/brown"
-        android:text="Hoteles"
+        android:text="@string/botonHoteles"
 
         />
     <Button
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.1"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/brown"
-        android:text="Restaurante"
+        android:text="@string/botonRestaurantes"
 
         />
     <Button
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.1"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/brown"
-        android:text="Sitios Turisticos"
+        android:text="@string/botonSitios"
 
         />
 
