--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,32 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bisque"
+    android:background="@drawable/fondo_flamenco"
     tools:context=".Home">
 
-    <ImageView
-        android:id="@+id/imagehome"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/icono_fla"
-        app:layout_constraintVertical_bias="0.1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/titulohome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/imagehome"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="MANAURE - LA GUAJIRA"
         android:textSize="28dp"
-        android:textColor="@color/hotpink"
+        android:textColor="@color/burlywood"
         android:textStyle="bold"
-        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintVertical_bias="0.02"
         />
     <Button
         android:id="@+id/botonHoteles"
@@ -39,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.6"
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/brown"
         android:text="@string/botonHoteles"
@@ -71,6 +62,20 @@
         android:layout_marginHorizontal="20dp"
         android:backgroundTint="@color/brown"
         android:text="@string/botonSitios"
+
+        />
+
+    <ImageView
+        android:id="@+id/imagehome"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/icono_fla"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/botonSitios"
 
         />
 
