--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/blanchedalmond"
     tools:context=".Resena">
 
         <ImageView
@@ -16,7 +17,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/old"
             android:adjustViewBounds="true"
-            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintVertical_bias="0"
             />
         <TextView
             android:id="@+id/titulohomeresena"
@@ -56,7 +57,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/old_2"
             android:adjustViewBounds="true"
-            app:layout_constraintVertical_bias="0.02"
             app:layout_constraintHeight_max="100dp"
             app:layout_constraintHorizontal_bias="0.05"
             />
