--- a/app/src/main/res/layout/molderestaurante.xml
+++ b/app/src/main/res/layout/molderestaurante.xml
@@ -40,7 +40,7 @@
             />
 
         <TextView
-            android:id="@+id/preciohotelmolde"
+            android:id="@+id/preciorestaurantemolde"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/fotomolderestaurante"
