--- a/app/src/main/res/layout/moldesitios.xml
+++ b/app/src/main/res/layout/moldesitios.xml
@@ -38,7 +38,7 @@
         />
 
     <TextView
-        android:id="@+id/preciohotelmolde"
+        android:id="@+id/preciositiomolde"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/fotomoldehotel"
