Se agrego información a los adpatadores

--- a/app/src/main/res/layout/activity_restaurantes.xml
+++ b/app/src/main/res/layout/activity_restaurantes.xml
@@ -61,7 +61,7 @@
         app:layout_constraintVertical_bias="0.3"
         />
     <Button
-        android:id="@+id/botonhomehoteles"
+        android:id="@+id/botonhomerestaurantes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/descripcionrestaurantes"
@@ -71,7 +71,7 @@
         app:layout_constraintVertical_bias="0.3"
         app:layout_constraintHorizontal_bias="0.4"
         android:backgroundTint="@color/brown"
-        android:text="@string/botonhomehoteles"
+        android:text="@string/botonhomerestaurantes"
         />
 
 
