--- a/app/src/main/res/layout/moldesitios.xml
+++ b/app/src/main/res/layout/moldesitios.xml
@@ -10,46 +10,50 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <ImageView
-        android:id="@+id/fotomoldesitios"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/modelsitios"
-        android:scaleType="fitXY"
-        />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/nombresitiomolde"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fotomoldesitios"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
-        android:text="HOTEL KAIGEE"
-        android:textSize="16dp"
-        android:layout_marginTop="5dp"
-        />
+        <ImageView
+            android:id="@+id/fotomoldesitios"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/modelsitios"
+            android:scaleType="fitXY"
+            />
 
-    <TextView
-        android:id="@+id/preciositiomolde"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fotomoldehotel"
-        app:layout_constraintStart_toEndOf="@id/nombrehotelmolde"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="$150.000"
-        android:textSize="18dp"
-        android:textStyle="bold"
+        <TextView
+            android:id="@+id/nombresitiomolde"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fotomoldesitios"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            android:text="Reserva los flamencos"
+            android:textSize="16dp"
+            android:layout_marginTop="5dp"
+            />
 
-        />
+        <TextView
+            android:id="@+id/preciositiomolde"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/fotomoldesitios"
+            app:layout_constraintStart_toEndOf="@id/nombresitiomolde"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="$50.000 COP"
+            android:textSize="18dp"
+            android:textStyle="bold"
+
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </androidx.cardview.widget.CardView>
