--- a/app/src/main/res/layout/molderestaurante.xml
+++ b/app/src/main/res/layout/molderestaurante.xml
@@ -15,12 +15,12 @@
         <ImageView
             android:id="@+id/fotomolderestaurante"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:scaleType="matrix"
+            android:adjustViewBounds="true"
             android:src="@drawable/molderestaurante"
             app:layout_constraintVertical_bias="0"
             />
@@ -33,23 +33,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.2"
             android:text="Restaurante Supuna Ichii"
-            android:textSize="16dp"
+            android:textSize="20dp"
             android:layout_marginTop="5dp"
+            android:textStyle="bold"
             />
 
         <TextView
             android:id="@+id/preciorestaurantemolde"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/fotomolderestaurante"
-            app:layout_constraintStart_toEndOf="@id/nombrerestaurantemolde"
+            app:layout_constraintTop_toBottomOf="@id/nombrerestaurantemolde"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="$50.000 - 250.000"
             android:textSize="18dp"
-            android:textStyle="bold"
+            app:layout_constraintVertical_bias="0.3"
 
             />
 
